--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,13 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
-
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# shortId generator js 
+shortId-generator.js]
+# shell script
+run.sh
